Fixed libstdc++ missing

--- a/3.4/Dockerfile
+++ b/3.4/Dockerfile
@@ -1,6 +1,10 @@
 FROM alpine:3.5
-ARG LIBSASS_VERSION
-ARG SASSC_VERSION
+ARG LIBSASS_VERSION=3.4.3
+ARG SASSC_VERSION=3.4.2
+
+ENV SASS_LIBSASS_PATH "/usr/local/libsass"
+
+RUN apk add --no-cache libstdc++
 
 # Compile and install SassC, without dependency bulk
 RUN apk add --no-cache --virtual build-dependencies \
@@ -15,11 +19,12 @@ RUN apk add --no-cache --virtual build-dependencies \
 	&& wget -O sassc.zip "https://github.com/sass/sassc/archive/${SASSC_VERSION}.zip" \
 	&& unzip libsass.zip \
 	&& unzip sassc.zip \
-	&& export SASS_LIBSASS_PATH=/usr/local/libsass-${LIBSASS_VERSION} \
-	&& cd "/usr/local/sassc-${SASSC_VERSION}" \
+	&& mv "sassc-${SASSC_VERSION}" sassc \
+	&& mv "libsass-${LIBSASS_VERSION}" libsass \
+	&& cd "/usr/local/sassc" \
 	&& make \
-	&& mv bin/sassc /usr/local/bin/sassc \
-	&& rm -fr /usr/local/libsass* /usr/local/sassc* \
+	&& ln -s /usr/local/sassc/bin/sassc /usr/local/bin/sassc \
+	&& rm -fr /usr/local/*.zip \
 	&& apk del build-dependencies
 
 # Run SassC by default
